<resources>
    <string name="app_name">People of Star Wars</string>
    <string name="failed_to_load_data">Failed to Load Data</string>
    <string name="people">People</string>
    <string name="loading">Loading</string>
    <string name="general_information">General Information</string>
    <string name="eye_color">Eye Color</string>
    <string name="hair_color">Hair Color</string>
    <string name="skin_color">Skin Color</string>
    <string name="birth_year">Birth Year</string>
    <string name="vehicles">Vehicles</string>
</resources>